<resources>
    <string name="app_name">SCES</string>
    <string name="title_products">Produtos</string>
    <string name="title_orders">Pedidos</string>
    <string name="title_profile">Perfil</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="address">Endereço</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="phone">Celular</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="product_name">Nome do produto</string>
    <string name="price">Preço</string>
    <string name="order_id">Número do pedido</string>
    <string name="client">Cliente</string>
    <string name="order_date">Data do pedido</string>
    <string name="order_products">Produtos do pedido:</string>
    <string name="register">Cadastrar</string>
    <string name="login_cpf_hint">CPF</string>
    <string name="login_password_hint">Senha</string>
    <string name="signup_login_hint">Já tem uma conta? Entrar</string>
    <string name="login_signup_hint">Não possui conta? Cadastre-se</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="category">Categoria</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_confirm_password_hint">Confirmar senha</string>
    <string name="product_code">Código do produto</string>
    <string name="product_reserve">Quantidade em estoque</string>
    <string name="category_name">Nome da categoria</string>
    <string name="category_code">Código da categoria</string>
    <string name="title_categories">Categorias</string>
    <string name="add_order_items">Adicionar item de pedido</string>
    <string name="title_order_items">Itens</string>
    <string name="orderItem_amount">Quantidade de itens de pedido</string>
    <string name="orderItem_id">ID Item Pedido</string>
    <string name="search_term">Termo</string>
    <string name="title_search">Pesquisa</string>
    <string name="order_price">Preço total</string>
    <string name="order">Pedido</string>
    <string name="order_client_name">CPF - Nome do cliente</string>
</resources>