<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="email"
            type="String" />

        <variable
            name="password"
            type="String" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView style="@style/parent">

            <RelativeLayout style="@style/parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:layout_weight="3"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:text="SCES" />

                    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                        style="@style/loginCard"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor"
                        android:elevation="5dp"
                        app:cardCornerRadius="@dimen/loginCardRadius">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                android:text="@string/login" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputEmail"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                android:hint="@string/login_email_hint"
                                android:tooltipText="@string/login_email_hint"
                                app:hintTextColor="@color/primary_color_on">

                                <EditText
                                    android:id="@+id/editTextEmail"
                                    style="@style/modifiedEditText"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:text="@={email}" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputPassword"
                                style="@style/parent"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                android:hint="@string/login_password_hint"
                                android:tooltipText="@string/login_password_hint"
                                app:hintTextColor="@color/primary_color_on">

                                <EditText
                                    android:id="@+id/editTextPassword"
                                    style="@style/modifiedEditText"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:text="@={password}" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <Button
                                android:id="@+id/irLoginButton"
                                style="@style/loginButton"
                                android:layout_height="40dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/loginViewsMargin"
                                android:text="@string/login" />

                            <FrameLayout
                                android:id="@+id/cadastrar_container"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:text="@string/login_signup_hint"
                                    android:textAlignment="center"
                                    android:textColor="@color/primary_color"
                                    android:textStyle="bold" />
                            </FrameLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />

                <ProgressBar
                    android:id="@+id/progress"
                    style="@style/Widget.MaterialComponents.CircularProgressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/loading_color"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>